[package]
name = "mt-mock-logger"
version = "0.1.1"
edition = "2021"
authors = ["Diogo Mattioli <diogomattioli@gmail.com>"]
license = "MIT"
description = "A thread safe mock logger designed to support logger mocking across multiple tests running in parallel"

[dependencies]
log = "0.4.22"

[dev-dependencies]
mockall = "0.13.0"
