[package]
name = "mt-mock-logger"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Diogo Mattioli <diogomattioli@gmail.com>"]
repository = "https://github.com/diogomattioli/mt_mock_logger"
description = "A thread safe mock logger designed to support logger mocking across multiple tests running in parallel"

[dependencies]
log = "0.4"

[dev-dependencies]
mockall = "0.13"
